--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="Project One - Python"><img class="grayscale" src="img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="Certificate One - Python"><img class="grayscale" src="img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -235,7 +235,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="overlay-effect effects clearfix">
               <div class="img">
-                  <a href="img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
+                  <a href="img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Certificate Two - communication Skill"><img class="grayscale" src="img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
               </div>
           </div>
       </div>
@@ -245,7 +245,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="Certificate Three - CSS"><img class="grayscale" src="img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -255,7 +255,7 @@
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="Certificate Four - JavaScript"><img class="grayscale" src="img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
