--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@
   	    <!-- PORTFOLIO ITEM END -->
   	             
           <!-- PORTFOLIO ITEM 5 -->
+	  <div class="col-md-3 col-sm-6 ">
+              <div class="overlay-effect effects clearfix">
+                  <div class="img">
+                      <a href="img/portfolio/react.jpg" data-lightbox="roadtrip" title="Certificate Four - JavaScript"><img class="grayscale" src="img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
+                  </div>
+              </div>
+          </div>
         
   	    <!-- PORTFOLIO ITEM END -->
         </div><!--/row-->
